--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@google/genai": "^1.34.0",
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
-    "xlsx": "0.18.5"
+    "xlsx": "0.18.5",
+    "react-hot-toast": "2.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
